Fixed lots of things

--- a/app/globals.css
+++ b/app/globals.css
@@ -151,6 +151,13 @@ body {
   h6 {
     @apply text-xs font-bold;
   }
+  code {
+    @apply bg-slate-200;
+    border-radius: 0.4rem;
+    color: var(--black);
+    font-size: 0.85rem;
+    padding: 0.25em 0.3em;
+  }
   pre {
     background: var(--foreground);
     border-radius: 0.5rem;
